--- a/src/app/components/variable-view/variable-view.component.css
+++ b/src/app/components/variable-view/variable-view.component.css
@@ -1,84 +1,18 @@
-#diagram-container{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    height: 100%;
-}
-
-.output-container{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    position: relative;
-    margin: 10px 10px 0px 10px;
+:host{
+    display: block;
+    height: 75%;
+    border-radius: 10px;
+    box-shadow: 0px 0px 4px rgba(64, 64, 63, 0.5);
+    margin: 10px;
     overflow: hidden;
-    flex: 0 0 5rem;
-}
-
-.output-container::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 90%;
-    height: 2px;
-    background: linear-gradient(to right, white, var(--pylab-primary));
-    border-radius: 0 0 20px 20px;
-}
-
-.output-container .title{
-    display: block;
-    width: fit-content;
-    float: right;
-    border-bottom-left-radius: 50px;
-    border-top-right-radius: 15px;
-    padding: 5px 10px 5px 20px;
-}
-
-.title{
-    font-size: 0.7em;
-    border-radius: 5px;
-    background: var(--pylab-primary);
-    color: white;
-    position: relative;
-    z-index: 1;
-}
-
-.variables-container{
-    position: relative;
-    margin: 0px 10px 10px 10px;
-    display: flex;
-    flex-direction: column;
-    flex: 1
-}
-
-.variables-container::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 90%;
-    height: 2px;
-    background: linear-gradient(to left, white, var(--pylab-primary));
-    border-radius: 0 0 20px 20px;
-}
-
-.variables-container .title{
-    display: block;
-    float: left;
-    border-bottom-right-radius: 50px;
-    border-top-left-radius: 15px;
-    padding: 5px 20px 5px 10px;
-    width: fit-content;
 }
 
 .contexts{
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    overflow-y: auto;
-    margin-top: 10px;
-    max-height: 13rem;
+    overflow: auto;
+    margin: 15px;
 }
 
 .context {
@@ -101,14 +35,4 @@
     margin: 5px 0;
     color: black;
     font-size: 15px;
-}
-
-#output{
-    margin: 5px;
-    padding: 5px;
-    word-wrap: break-word;
-    font-size: 0.9em;
-    overflow: auto;
-    max-height: 100%;
-    width: 100%;
 }
