--- a/src/app/components/code-view/code-view.component.scss
+++ b/src/app/components/code-view/code-view.component.scss
@@ -1,22 +1,18 @@
+:host {
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 4px rgba(64, 64, 63, 0.5);
+}
+
 .general-container {
-  height: 100%;
-  padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-}
-
-.inputs-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-self: center;
-  align-items: baseline;
-  gap: 10px;
+  margin: 10px;
 }
 
 #editor-container {
-  height: 100%;
+  height: 75vh;
 }
 
 .buttons-container {
@@ -24,8 +20,9 @@
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  margin-top: 5px;
   position: relative;
+  align-items: center;
+  margin-top: 10px;
 }
 
 .icon {
@@ -33,31 +30,34 @@
   padding: 0px;
   margin: 3px;
   height: 24px !important;
-  width: 24px  !important;
+  width: 24px !important;
 
-  &.disabled {
+  button:disabled {
     cursor: not-allowed;
     color: rgba(var(--pylab-accent-rgb), 0.6);
   }
 }
 
-.execution-info{
+.execution-info {
   position: absolute;
   right: 0;
 
-  &.finished{
+  &.finished {
     color: var(--pylab-success);
   }
 
-  &.executing{
+  &.executing {
     color: rgba(var(--pylab-accent-rgb), 0.5);
   }
 }
 
-.velocity-button{
-  max-height: 24px;
+// Items velocity
+.mat-mdc-menu-item {
+  min-height: 31px !important;
 }
 
-.mat-mdc-menu-item{
-  min-height: 31px !important;
+@media (max-width: 650px) {
+  #editor-container {
+    height: 40vh;
+  }
 }
