--- a/src/app/pages/program-display/program-intro-modal/program-intro-modal.component.css
+++ b/src/app/pages/program-display/program-intro-modal/program-intro-modal.component.css
@@ -10,10 +10,10 @@
 
 .intro-container{
     padding: 0px 20px 20px 20px;
-    max-height: 50vh;
+/*     max-height: 50vh;
     min-height: 50vh;
     max-width: 60vw;
-    min-width: 60vw;
+    min-width: 60vw; */
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -24,7 +24,6 @@
     text-align: justify;
     padding-right: 15px;
     color: var(--pylab-accent);
-
 }
 
 .header{
