--- a/src/app/pages/program-list/program-list.component.html
+++ b/src/app/pages/program-list/program-list.component.html
@@ -1,26 +1,23 @@
 @if (!loadingList){
-<div class="program-list-container">
-    <div class="cards-container">
-        <ng-container *ngFor="let program of programs; let i=index">
-            <mat-card class="program-card">
-                <mat-card-header>
-                    <mat-card-title>{{ program.title }}</mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
+    <div class="programs-container">
+        @for (program of programs; track $index) {
+            <div class="program">
+                <section class="header">
+                    <h3>{{ program.title }}</h3>
                     <div class="stars">
                         <span style="margin-right: 5px;">Dificultad:</span>
-                        <ng-container *ngFor="let star of [1, 2, 3, 4, 5]">
-                            <mat-icon *ngIf="star <= program.difficulty">star</mat-icon>
-                            <mat-icon *ngIf="star > program.difficulty" class="not-filled">star_border</mat-icon>
-                        </ng-container>
+                        <section class="icons">
+                            <ng-container *ngFor="let star of [1, 2, 3, 4, 5]">
+                                <mat-icon *ngIf="star <= program.difficulty">star</mat-icon>
+                                <mat-icon *ngIf="star > program.difficulty" class="not-filled">star_border</mat-icon>
+                            </ng-container>
+                        </section>                      
                     </div>
-                </mat-card-content>
+                </section>
                 <button mat-flat-button color="primary" (click)="goToDisplay(program)">Ver Ejemplo</button>
-            </mat-card>
-        </ng-container>
+            </div>
+        }
     </div>
-
-</div>
 } @else {
 <app-spinner [loading]="loadingList"></app-spinner>
 }
