--- a/src/app/pages/program-list/program-list.component.scss
+++ b/src/app/pages/program-list/program-list.component.scss
@@ -2,40 +2,40 @@
     color: var(--pylab-accent)
 }
 
-.program-list-container{
+:host{
+    display: block;
+    height: 100vh;
+    overflow: auto;
+}
+
+.programs-container {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    justify-content: space-between;
     padding: 25px;
+    gap: 15px;
 }
 
-.cards-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.program-card {
-    width: 100%;
-    max-width: 60rem;
-    margin: 10px;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+.program {
     border-radius: 10px;
-    height: 3.5rem;
+    padding-top: 10px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.4);
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+    min-width: 350px;
 }
 
-mat-card-header {
-    padding: 5px;
-    margin: 0px 15px;
-    width: 30rem;
+.header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 15px;
+    padding: 15px;
 }
 
-mat-card-content{
-    min-width: 16rem;
-    max-width: 16rem;
+h3{
+    width: 70%;
+    color: var(--pylab-accent);
+    letter-spacing: 1px;
 }
 
 .stars {
@@ -43,6 +43,12 @@ mat-card-content{
     gap: 5px;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+
+    .icons{
+        display: flex;
+        flex-direction: row;
+    }
 
     mat-icon{
         color: var(--pylab-primary);
@@ -51,18 +57,66 @@ mat-card-content{
             color: rgba(var(--pylab-accent-rgb), 0.2);
         }
     }
+
 }
 
 button{
-    height: 100%;
-    width: 15%;
-    border-top-left-radius: 30px;
-    border-top-right-radius: inherit;
-    border-bottom-right-radius: inherit;
+    width: 100%;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+    line-height: 30px;
 }
 
-mat-paginator {
-    display: flex;
-    justify-content: center;
-    background-color: transparent;
+@media (min-width: 1000px) {
+    .program{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        border-radius: 10px;
+        padding: 0px;
+        position: relative;
+    }
+
+    .stars{
+        flex-wrap: nowrap;
+    }
+
+    .header{
+        width: 80%;
+    }
+
+    button{
+        width: fit-content;
+        border-top-left-radius: 30px;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        border-bottom-left-radius: 0px;
+        height: 100%;
+        position: absolute;
+        right: 0;
+    }
 }
+
+@media (max-width: 600px) {
+    .header{
+        flex-direction: column;
+        gap: 10px;
+        padding: 15px;
+    }
+
+    .stars{
+        width: 100%;
+        justify-content: start;
+    }
+
+    h3{
+        width: 100%;
+        font-size: 17px;
+    }
+
+}
+
+
+
